# uipath-mcp-server

./: .dockerignore  .gitignore  AZURE.md  BUILD_VERIFICATION.md  BUILTIN_TOOLS_FEATURE.md  BUILTIN_TOOLS_VERIFICATION.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  README.md  TEST_RESULTS.md  azure-deploy.sh  azure-webapp-config.json  build.sh  deploy.sh  docker-build-simple.sh  docker-build.sh  docker-compose.yml  get-version.sh  package-lock.json  package.json  startup.sh  test_builtin_tools.sh  test_server_running.sh  test_uipath_config.sh  test_uipath_setup.sh
backend/: .env.example  .gitignore  README.md  mcp.json  pyproject.toml  requirements.txt
backend/database/: .gitkeep  README.md
backend/migrations/: add_api_tokens.py  add_folder_id.py
backend/scripts/: OAUTH_CURL_EXAMPLES.md  README.md  README_OAUTH_TEST.md  add_sample_builtin_tool.py  add_uipath_folder_tools.py  add_uipath_job_tools.py  add_uipath_queue_tools.py  add_uipath_schedule_tools.py  check_builtin_tools.py  check_process_keys.py  debug_mcp_access.py  debug_uipath_api.py  force_register_storage_tools.py  migrate_remove_folder_path.py  migrate_tool_type.py  register_builtin_tools_now.py  reset_and_add_uipath_tools.py  reset_user_password.py  setup_test_user.py  test_arguments_parsing.py  test_builtin_registry.py  test_builtin_tool.py  test_db_token.py  test_live_connection.py  test_mcp_auth.py  test_mcp_authentication.py  test_mcp_connection.sh  test_oauth_credentials.py  test_oauth_curl.sh  test_specific_token.sh  test_token_api.py  (+7 more)
mcp-builtin-uipath/: README.md  pyproject.toml
mcpclient/: app.py  (+18 more)
(+110 files in other folders)
