[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-builtin-uipath"
version = "0.1.0"
description = "UiPath built-in tools for MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_builtin_uipath"]
